--- a/BinCore/BinCore.vcxproj
+++ b/BinCore/BinCore.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>..\WidgetApp\bin\Debug\net8.0-windows</OutDir>
+    <OutDir>..\CoreTest\bin\Debug\net8.0</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
